kube-fortune/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-fortune
  labels:
    app: kube-fortune
